Installed carrierwave and set up new pet form

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,1 +1,13 @@
 <h1>Random Pet</h1>
+
+<div class="large-12 columns">
+  <div class="row">
+    <% @pets.each do |pet| %>
+    <div class="large-4 small-6 columns pull-left">
+<!--       <%= image_tag(beard.img.url(:thumb)) %>
+ -->      <p class="beard-title"><%= link_to pet.name, pet_path(pet.id) %></p>
+      </div>
+    <% end %>
+  </div>
+</div>
+
