--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,26 @@
 <%# add navigation links to this file %>
+
+<nav class="top-bar-section">
+  <% if owner_signed_in? %>
+    <ul class ="title-area">
+      <li class="name"><%= link_to 'Edit profile', edit_owner_registration_path %></li>
+      <li class="name"><%= link_to 'Puppy Pals' %></li>
+      <li class="name"><%= link_to 'Messages'%></li>
+      <li class="name"><%= link_to 'Sign out', destroy_owner_session_path %></li>
+    </ul>
+  <% else %>
+    <ul class ="title-area">
+      <li class="name"><%= link_to 'Sign in', new_owner_session_path %></li>
+      <li class="name"><%= link_to 'Sign up', new_owner_registration_path %></li>
+    </ul>
+  <% end %>
+
+
+
+
+
+
+
+
+
+
