--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,13 +1,12 @@
 <h1>My Puppy Pals</h1>
 
 <ul>
-  <% for friendship in current_owner.friendships %>
+  <% @friendships.each do |friendship| %>
     <li>
-      <%= friendship.friend %>
-      (<%= link_to "remove", owner_friendships_path, method: :delete %>)
+      <%= friendship.friend.name %>:
+      <%= link_to 'Message', new_owner_message_path(current_owner) %>
+      (<%= link_to 'Un-Pal', friendship_path(friendship), method: :delete %>)
     </li>
   <% end %>
 </ul>
 
-<!-- <p><%= link_to "Find Puppy Pals", pets_path %></p>
- -->
