--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,7 +5,7 @@
     <ul class ="title-area">
       <li class="name"><%= link_to 'Edit profile', edit_owner_registration_path %></li>
       <li class="name"><%= link_to 'Puppy Pals', friendships_path %></li>
-      <li class="name"><%= link_to 'Messages', message_path(current_owner) %></li>
+      <li class="name"><%= link_to 'Messages', messages_path %></li>
       <li class="name"><%= link_to 'Sign out', destroy_owner_session_path %></li>
     </ul>
   <% else %>
