Scraping and Styling, with some user specs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+@import 'foundation-icons';
+
+.button-right{
+  float: right;
+}
+
+.button-left {
+  float: left;
+}
