--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -8,7 +8,8 @@
 </div><br>
 
 <div class = "text-center description">
-  <%= @pet.personality %><%= @pet.favorite_things %>
+  Me in a few words: <%= @pet.personality %><br>
+  Some of my favorite things: <%= @pet.favorite_things %>
 </div><br>
 <hr>
 
