--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
   <div><%= f.label :profile_photo %><br />
     <%= f.file_field :profile_photo, required: true,  label: "Image" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Create Account" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
