--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -18,13 +18,13 @@
 <% @pets.each do |pet| %>
   <p class="button-left">
     <%= link_to pets_path do %>
-      <i class="fi-paw"></i>
+      <i class="fi-paw large"></i>
       <%= "Pass" %>
     <% end %>
   </p>
   <p class="button-right">
     <%= link_to pet_friendships_path(pet), method: :post do %>
-      <i class="fi-heart"></i>
+      <i class="fi-heart large"></i>
       <%= "Friend" %>
     <% end %>
   </p>
