--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,40 +1,55 @@
+<% if owner_signed_in? %>
 <br>
 <div class ="row">
   <div class="large-12 columns">
     <div class="row">
-<% @pets.each do |pet| %>
-      <div class="small-6 small-centered columns pull-left">
-        <%= image_tag(pet.profile_photo) %>
-        <p class="text-center"><%= link_to pet.name, pet_path(pet.id) %></p>
-      </div>
+      <% @pets.each do |pet| %>
+        <div class="small-6 small-centered columns pull-left">
+          <%= image_tag(pet.profile_photo) %>
+            <p class="text-center"><%= link_to pet.name, pet_path(pet.id) %>
+            </p>
+        </div>
       <% end %>
     </div>
   </div>
 </div>
 
 <br>
-<% if owner_signed_in? %>
-<div class="row">
-<% @pets.each do |pet| %>
-  <p class="button-left">
-    <%= link_to pets_path do %>
-      <i class="fi-paw large"></i>
-      <%= "Pass" %>
-    <% end %>
-  </p>
-  <p class="button-right">
-    <%= link_to pet_friendships_path(pet), method: :post do %>
-      <i class="fi-heart large"></i>
-      <%= "Friend" %>
-    <% end %>
-  </p>
-  </div>
+
+  <div class="row">
+    <% @pets.each do |pet| %>
+      <p class="button-left">
+        <%= link_to pets_path do %>
+          <i class="fi-paw large"></i>
+          <%= "Pass" %>
+        <% end %>
+      </p>
+      <p class="button-right">
+        <%= link_to pet_friendships_path(pet), method: :post do %>
+          <i class="fi-heart large"></i>
+          <%= "Friend" %>
+        <% end %>
+      </p>
+    </div>
   <% end %>
 </div>
+
 <br>
 <br>
+
 <p class="text-center">
 <%= link_to 'Create Pet Profile!', new_pet_path %>
 </p>
+
+<% else %>
+<div class="row">
+<div class="large-12 columns">
+  <div class="row">
+
+    <img alt="dog park" src="https://s3.amazonaws.com/barkr2-development/uploads/UFhRrA1405908334.jpg?X-Amz-Date=20140721T154639Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=0e25222847953561a8e9b42bc667beaac999c1533a59670d5957e303e2e7988e&X-Amz-Credential=ASIAJ6UO7OXMTHBVOHKQ/20140721/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=AQoDYXdzEBkawAKnl7WUm5mCGiJAXJq7J1ww7G0YnybS1PvX%2BYN2u3ptejJ7mSy8vMCiDdOPz6T01v0NBzxjgbSu%2BV6TF3olT1d3Wy9yIdZzdhKAhVS3TSPcNzfn9BOUkVoGntrT/Hx1dq8iOz/cp9qxNgJngmHJdfNMEjNCYuoj5%2BSBSQ9vF%2BEX7wbCH/71BRoU2JWlOvRuKUkRzVTiFk1cadrAoTWpvoSxzd9IaoGZtlV5gcEPRA3zgWs5oE4hq08yYfK/UptcHvoY4Q4It1TL1BSApbzJ1ZaikHLyl3oowz/WwiLXZaNc964tULwZoqWUQjjVIhNcCtWiCbyEhdzF2xsuWNbcD/hzVBCVRzFsZYrypQw7L0jgQzEUcN9LGuIy6bMcO9gcbm/9q%2BOWIile4iC9Tw2Yf1SoI5dWya9MRsfTYUncCwUtIiDV67SeBQ%3D%3D">
+  </div>
 <% end %>
+
+
+
 
