--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+<div class="small-6 large-centered columns">
+<div class="row">
 <h1>New Pet Profile</h1>
 
 <% if @pet.errors.any? %>
@@ -12,16 +15,21 @@
 </div>
 <% end %>
 
+
 <%= simple_form_for @pet, html: { multipart: true } do |f| %>
   <%= f.input :name, required: true, label: "Pet Name:"  %>
   <%= f.file_field :profile_photo, type: :file %>
   <%= f.input :breed, required: true, label: "Breed", collection: Pet::BREEDS %>
   <%= f.input :age, required: true %>
+  <%= f.input :gender, label: 'What is the sex?', collection: [ ['F', 'Female'], ['M', 'Male']], as: :radio_buttons, label_method: :last, value_method: :first, checked: @pet.gender %>
   <%= f.input :weight, required: true %>
   <%= f.input :personality, as: :text %>
   <%= f.input :favorite_things, as: :text %>
   <%= f.button :submit %>
 <% end %>
+</div>
+</div>
+</div>
 
 
 
