--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -3,6 +3,7 @@
   <%= image_tag(@pet.profile_photo.url(:thumb)) %><br>
   <%= @pet.breed %><br>
   <%= @pet.age %> yrs old<br>
+  <%= @pet.gender %>
   <%= @pet.weight %> lbs
 
 </div><br>
