--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -11,18 +11,23 @@
 <% end %>
 
 <h2 class ="text-center">Edit <%= @pet.name %>'s Profile</h2>
-
+<div class="row">
+<div class="small-6 large-centered columns">
+<div class="middle row">
 <%= simple_form_for @pet, html: { multipart: true } do |f| %>
   <%= f.input :name, required: true, label: "Pet Name:"  %>
   <%= f.file_field :profile_photo, type: :file %>
   <%= f.input :breed, required: true, label: "Breed:" %>
   <%= f.input :age, required: true %>
+  <%= f.input :gender, label: 'What is the sex?', collection: [ ['F', 'Female'], ['M', 'Male']], as: :radio_buttons, label_method: :last, value_method: :first, checked: @pet.gender %>
   <%= f.input :weight, required: true %>
   <%= f.input :personality, as: :text %>
   <%= f.input :favorite_things, as: :text %>
   <%= f.button :submit, 'Save Changes' %>
   <%= f.button :submit, 'Delete Pet' %>
 <% end %>
-
+</div>
+</div>
+</div>
 
 
