Image issue fix #3

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -49,7 +49,7 @@
 <div class="row">
 <div class="large-12 columns">
   <div class="row">
-    <img alt="dog park" src="https://s3.amazonaws.com/barkr2-production/UFhRrA1405908334.jpg?X-Amz-Date=20140721T211441Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=76f9b062299589c0e63255f98f3ae0e06835b7c37d8d9454ba34336f892f167e&X-Amz-Credential=ASIAICVZ5MSZXEQNDG7Q/20140721/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=AQoDYXdzEB4awALa5n6YUKCtK9RSLx6jDLzP0mlahe/r409BvdUnXr9VQRwikPglXU5Vcqj/fZNCNfrsuv0wzUV1GRvBcITPuALCszmTgX%2Brxasn3U25z2ioGNvYAzfmnXwk%2BihRApP0W9Cl6mz7tZOG7/1SwWGxcizRDqnB3TtTt8NIpZMLG2mcKXxkqoGVD1da1zyKPcd3zQIXctOKA5R2zh%2B6BLsKcRQ2gEQe8b2yDLX4WHnLOXIHZX/dWmPwG4gx8LAfMqhzQj9VZl7BPfWJ1bKutFedsGI/pQCM58SV49WGxcVHxbI4jmX1aDqktu%2BpecXqhqWO6lO3iEngLZjWSwRuSxR1R7HfvRUuGOFiGpzPKt2pUp02dsqGYmcio0TAQZiX/c7fr6pyDLjY9wmB7DJUlcrO5dvw8aUWLjBdgH4LRxelGzroCyDV67SeBQ%3D%3D">
+    <img alt="dog park" src="/assets/UFhRrA1405908334.jpg">
   </div>
 <% end %>
 
