--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 
   <div><%= f.label :profile_photo %><br />
     <%= f.file_field :profile_photo, label: "Image" %>
-    <%= image_tag (current_owner.profile_photo.url(:thumb)) %>
+    <%= image_tag (current_owner.profile_photo.url(:thumb)) %></div>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
